<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
