<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timer_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/timer_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timer_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/timer_duration_pickers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/timer_name_label">

            <NumberPicker
                android:id="@+id/hours_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/hours_label"
                style="@style/Widget.MultiTimer.TextView"
                android:layout_marginEnd="@dimen/margin_between_elements"
                android:text="@string/hours_abbreviation" />

            <NumberPicker
                android:id="@+id/minutes_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_between_elements" />

            <TextView
                android:id="@+id/minutes_label"
                style="@style/Widget.MultiTimer.TextView"
                android:layout_marginEnd="@dimen/margin_between_elements"
                android:text="@string/minutes_abbreviation" />

            <NumberPicker
                android:id="@+id/seconds_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_between_elements" />

            <TextView
                android:id="@+id/seconds_label"
                style="@style/Widget.MultiTimer.TextView"
                android:text="@string/seconds_abbreviation" />

        </LinearLayout>

        <Button
            android:id="@+id/save_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:text="@string/save_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_duration_pickers" />

        <Button
            android:id="@+id/cancel_action"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:text="@string/cancel_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_action" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
